--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CircleChart</string>
+    <string name="default_title">NTD</string>
+    <string name="default_content">100,000</string>
 </resources>
